<resources>
    <string name="app_name">Customize Orders</string>
    <string name="price_25000">Price: </string>
    <string name="desc">Desc: A dialogue must be shown to select the crust and size from lists of available single-choice options</string>
    <string name="item_name">Item Name : Non Veg</string>
    <string name="quantity">Quantity: </string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove">Remove</string>
    <string name="customize_pizza_title">Customize Pizza</string>
    <string name="sizes">Sizes</string>
    <string name="cancel">Cancel</string>
    <string name="minus"> - </string>
</resources>
