<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/add">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:textStyle="bold|italic"
                android:textColor="@color/color_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_large"
                android:textAlignment="center"
                android:textSize="@dimen/text_title_size"
                android:text="@string/customize_pizza_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/crustRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                app:layout_constraintBottom_toTopOf="@+id/title_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:listitem="@layout/layout_recycler_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_size"
                android:textStyle="bold|italic"
                android:textColor="@color/color_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crustRecyclerView"
                android:layout_marginTop="@dimen/margin_small"
                android:textAlignment="center"
                android:textSize="@dimen/text_title_size"
                android:text="@string/sizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sizeRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_size"
                tools:listitem="@layout/layout_recycler_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/add_bg"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_small"
        android:text="@string/add_to_cart"
        android:textColor="@color/colorWhite"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/remove_bg"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_small"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toTopOf="@+id/add" />

</androidx.constraintlayout.widget.ConstraintLayout>
